# sinpapel-skills

./: .gitignore  Makefile  README.md  build_skills.py  pyproject.toml
docs/superpowers/plans/: 2026-06-23-sinpapel-vue-skills.md
docs/superpowers/specs/: 2026-06-23-sinpapel-vue-skills-design.md
skills/sinpapel-audit-trail/: SKILL.md
skills/sinpapel-drf/: SKILL.md
skills/sinpapel-metadata/: SKILL.md
skills/sinpapel-migrations-seeding/: SKILL.md
skills/sinpapel-migrations-seeding/assets/: seed_flujo_template.py
skills/sinpapel-overview/: SKILL.md
skills/sinpapel-project-setup/references/: settings-reference.md
skills/sinpapel-reports/: SKILL.md
skills/sinpapel-signing/: SKILL.md
skills/sinpapel-signing/references/: fiel-modes.md
skills/sinpapel-sla/: SKILL.md
skills/sinpapel-testing/: SKILL.md
skills/sinpapel-transitions/: SKILL.md
skills/sinpapel-vue-setup/: SKILL.md
skills/sinpapel-vue-store/: SKILL.md
